; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ec/extr_ec_print.c_EC_POINT_hex2point.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/ec/extr_ec_print.c_EC_POINT_hex2point.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @EC_POINT_hex2point(i32* %0, i8* %1, i32* %2, i32* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @BN_hex2bn(i32** %11, i8* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %4
  store i32* null, i32** %5, align 8
  br label %25

16:                                               ; preds = %4
  %17 = load i32*, i32** %6, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32*, i32** %9, align 8
  %21 = call i32* @EC_POINT_bn2point(i32* %17, i32* %18, i32* %19, i32* %20)
  store i32* %21, i32** %10, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = call i32 @BN_clear_free(i32* %22)
  %24 = load i32*, i32** %10, align 8
  store i32* %24, i32** %5, align 8
  br label %25

25:                                               ; preds = %16, %15
  %26 = load i32*, i32** %5, align 8
  ret i32* %26
}

declare dso_local i32 @BN_hex2bn(i32**, i8*) #1

declare dso_local i32* @EC_POINT_bn2point(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BN_clear_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
